# lib/db/src/schema/loans.ts
@@ -3,6 +3,7 @@ import {
   serial,
   text,
   numeric,
+  integer,
   timestamp,
   pgEnum,
   jsonb,
@@ -32,6 +33,7 @@ export const loansTable = pgTable("loans", {
     scale: 2,
   }).notNull(),
   interestRate: numeric("interest_rate", { precision: 5, scale: 2 }).notNull(),
+  tenureMonths: integer("tenure_months"),
   startDate: text("start_date").notNull(),
   dueDate: text("due_date").notNull(),
   description: text("description"),
